# solving-localhost-dev

./: .prettierrc.json  Secrets.Statefile.yml  Statefile.yml  readme.md
api/: .dockerignore  .env  Cargo.toml  Dockerfile  Statefile.yml
api/migrations/00000000000000_diesel_initial_setup/: up.sql
api/migrations/2023-05-07-003807_users/: up.sql
api/migrations/2023-05-07-033653_roles/: down.sql  up.sql
api/migrations/2023-05-07-033657_token/: down.sql  up.sql
api/src/: error.rs  main.rs  schema.rs  store.rs
api/src/models/: role.rs  token.rs  user.rs
api/src/repositories/: mod.rs  role.rs  token.rs  user.rs
api/src/services/: mod.rs  openapi.rs  role.rs  swagger.rs  user.rs
auth/: Dockerfile  Statefile.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.js
auth/app/: layout.tsx  page.tsx
auth/app/password_reset/: page.tsx
auth/app/signup/: page.tsx
auth/components/: PageTitle.tsx
auth/lib/: api.tsx
auth/styles/: globals.css
console/: Dockerfile  Statefile.yml  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js
console/app/: layout.tsx  page.tsx
console/app/users/: page.tsx
console/components/: icons.tsx  main-nav.tsx  preloader.tsx  provider.tsx  site-header.tsx  table.tsx
console/config/: site.ts
console/lib/: api.ts  me-ctx.ts
console/store/: index.ts  me-slice.ts
console/styles/: globals.css
