[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.4", features = [
  "postgres",
  "r2d2",
  "chrono",
  "uuid",
] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
env_logger = "0.10.0"
log = "0.4.17"
ntex = { version = "2", features = ["tokio"] }
r2d2 = "0.8.10"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4", "serde", "v7", "v5"] }
chrono = { version = "0.4.24", default-features = false, features = [
  "std",
  "clock",
  "serde",
] }
utoipa-swagger-ui = "3.1.3"
utoipa = { version = "3.3.0", features = ["uuid", "chrono"] }
argon2 = { version = "0.5.0", features = ["std"] }
rand = "0.8.5"
base64 = "0.21.0"
ntex-identity = "2"
ntex-session = "2"
cookie = "0.17.0"
ntex-cors = { version = "2" }

# [patch.crates-io]
# ntex-cors = { git = "https://github.com/ntex-rs/ntex-extras.git" }
